--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,6 +7,7 @@
     <script src="{{ site.url }}/assets/js/scripts.js"></script>
     {% if site.google.analytics %}
     <!-- Asynchronous Google Analytics snippet -->
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -14,7 +15,7 @@
       ga('create', '{{ site.google.analytics }}', 'auto');
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
-    </script> -->
+    </script>
     {% endif %}
     {% if page.comments != false %}
         {% include disqus_comments.html %}
